[gd_scene load_steps=2 format=3 uid="uid://e9a1b3c4qwert"]

[ext_resource type="Script" path="res://scripts/ui/title_screen.gd" id="1_title"]

[node name="TitleScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_title")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "POC Godot Roguelite"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "2D Roguelike Action Game"
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "ゲーム開始"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "終了"
